@@ -204,8 +204,7 @@ Wiki Code:
 <div style="visibility: visible;" id="woas_debug_panel">
 <p>&nbsp;<span style="font-size: large; font-weight: bold;">Debug console</span>&nbsp;&nbsp;<input value="Toggle" onclick="$.toggle('woas_debug_console')" type="button" /></p>
 <p><span id="woas_debug_console" style="visibility: visible; display: inline;">
-<textarea style="display: inline; visibility: visible;" id="woas_debug_log" ondblclick="$('woas_debug_log').value=''" rows="12" readonly="readonly" cols="60"></textarea><br /><input onclick="$('woas_debug_log').value=''" value="Clear" type="button" />Press button or double-click log area to clear
-</span></p>
+<textarea style="display: inline; visibility: visible;" id="woas_debug_log" rows="12" readonly="readonly" cols="60"></textarea><br /><input onclick="$('woas_debug_log').value=''" value="Clear" type="button" /></span></p>
 </div>
 <div class="woas_about_footer"><a class="link" onclick="go_to('Special::About')">About Wiki on a Stick v@@WOAS_VERSION@@</a></div>
 <script type="text/javascript">
